# fee-forensics-agent

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  ARCHITECTURE.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  docker-compose.yml  fee-forensics.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/: FUNDING.yml  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  question.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  labeler.yml  release.yml  stale.yml
examples/: README.md  basic_usage.py  benchmark.py  run_examples.ps1  workflow_automation.py
examples/output/: sample-report.md
finance_agent/: analysis.py  cli.py  config.py  export.py  ingest.py  lc_explain.py  logging_config.py  models.py  reporting.py
sample-data/: agreement.txt  statement-fees.csv  statement-no-fees.csv  statement.csv
tests/: test_audit.py  test_cli.py  test_integration.py
