[project]
name = "fee-forensics-agent"
version = "0.1.0"
description = "Finance AI agent: bank fee forensics + statement audit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "pydantic>=2.7",
  "python-dateutil>=2.9",
  "rich>=13.7",
  "typer>=0.12",
  "langchain>=0.2",
  "langchain-core>=0.2",
  "langsmith>=0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
]
llm = [
  "langchain-openai>=0.1",
]

[project.scripts]
fee-forensics = "finance_agent.cli:app"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["finance_agent*"]
