[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fee-forensics-agent"
version = "0.1.2"
description = "Finance AI agent: bank fee forensics + statement audit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "python-dateutil>=2.9",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]
llm = [
  "langchain>=0.2",
  "langchain-core>=0.2",
  "langchain-openai>=0.1",
  "langsmith>=0.1",
]

[project.scripts]
fee-forensics = "finance_agent.cli:app"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"finance_agent/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=finance_agent --cov-report=term-missing --cov-fail-under=65"

[tool.setuptools.packages.find]
include = ["finance_agent*"]
