[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fee-forensics-agent"
version = "0.8.0"
description = "Finance AI agent: bank fee forensics + statement audit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.3",
  "python-dateutil>=2.9.0",
  "rich>=13.9.0",
  "typer>=0.12.5",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0",
]
llm = [
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langsmith>=0.1.0",
]

[project.scripts]
fee-forensics = "finance_agent.cli:app"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"finance_agent/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=finance_agent --cov-report=term-missing --cov-fail-under=65"

[tool.setuptools.packages.find]
include = ["finance_agent*"]
